fix details/summary on firefox

--- a/assets/brutalism.css
+++ b/assets/brutalism.css
@@ -395,6 +395,10 @@ a:not(.button):hover {
     cursor: pointer;
     margin-top: 1rem;
     margin-bottom: 1rem;
+
+    h3 {
+        display: inline-block;
+    }
 }
 
 .post-page-title {
